// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MIOpenImage should handle open 1`] = `
<MIOpenImage
  disabled={false}
>
  <TopMenuItem
    disabled={false}
    onClick={[Function]}
  >
    <div
      data-mock="TopMenuItem"
      onClick={[Function]}
    >
      <Component
        icon="faImagePolaroid"
      >
        <span
          data-mock="FontAwesomeIcon"
        >
          faImagePolaroid
        </span>
      </Component>
    </div>
  </TopMenuItem>
  <MIOpenImage
    open={true}
  >
    <div
      data-mock="OpenImageDialog"
    >
      open: 
      true
    </div>
  </MIOpenImage>
</MIOpenImage>
`;

exports[`MIOpenImage should render 1`] = `
Array [
  <div
    data-mock="TopMenuItem"
    onClick={[Function]}
  >
    <span
      data-mock="FontAwesomeIcon"
    >
      faImagePolaroid
    </span>
  </div>,
  <div
    data-mock="OpenImageDialog"
  >
    open: 
    false
  </div>,
]
`;
